fix: The loading spinner overlaps the sticker picker

--- a/src/components/message/input/input_stickmoji.scss
+++ b/src/components/message/input/input_stickmoji.scss
@@ -9,7 +9,7 @@
   background: #ffffff;
   border-radius: 10px;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3);
-  z-index: 2;
+  z-index: 100;
   transform-origin: bottom left;
   opacity: 0;
   transform: scale(0);
